--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ img {
 }
 
 .hero-section .swiper-slide {
-  height: calc(100vh - 170px);
+  height: 100vh;
   background-attachment: fixed;
   background-size: cover;
 }
@@ -310,6 +310,7 @@ img {
 label {
   font-weight: 500;
   color: var(--brand-color-secondary);
+  padding-left: 9px;
 }
 
 .appointment-box .form-field {
