--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 1000px) {
+@media (max-width: 700px) {
 
   body, html {
     overflow-x: hidden; /* Disable horizontal scrolling */
@@ -58,4 +58,64 @@
       margin-bottom: 15px;
     }
 
+    .hero-section .swiper-slide {
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: #272626;
+      height: 60vh;
   }
+
+  .facts-and-figure {
+    background-color: var(--brand-color-secondary);
+    position: absolute;
+    bottom: -59px;
+    width: 100%;
+}
+
+  
+
+  }
+
+  @media (min-width: 710px) and (max-width: 1000px) {
+
+    .logo-section img {
+      max-width: 150%;
+  }
+    
+    .hero-section .swiper-slide {
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-color: #272626;
+      height: 60vh;
+  }
+
+  .facts-and-figure {
+    background-color: var(--brand-color-secondary);
+    position: absolute;
+    bottom: -59px;
+    width: 100%;
+}
+.about-section{
+  margin-bottom: 50px;
+}
+
+body{
+  overflow-x: hidden;
+}
+
+.team-member-info .team-social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.blog-card .blog-contains{
+  left: 21px;
+}
+
+.testomonial-section .test-card .test-image{
+  height: 85px;
+}
+    
+}
